align key in header and fixing css/h (register page)

--- a/web/design/css/db_style.css
+++ b/web/design/css/db_style.css
@@ -1,10 +1,9 @@
-@font-face {
-    font-family: 'Montserrat', sans-serif;
-    src: url(../fonts/Montserrat-Bold.ttf);
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    vertical-align: middle;
+    padding: 20px 5px;
 }
-
 .glyphicon1 {
-    padding: 10px 35px !important;
+    padding: 13px 35px !important;
 }
 
 .nav>li>a:hover {
@@ -57,13 +56,14 @@ body {
     background: url(../images/bk.jpg) no-repeat;
     background-size: cover;
     height: 100vh;
-    width: 12%;
+    width: 10.3%;
 }
 
 .nav-sidebar {
     margin-right: -21px;
     margin-bottom: 20px;
     margin-left: -25px;
+    margin-top: 15px;
 }
 
 .in a {
@@ -71,14 +71,15 @@ body {
 }
 
 .logoYellow {
-    margin-bottom:20px;
+    margin-bottom: 20px;
     padding-left: 25px;
+    margin-top: 12px;
 }
 
 .glyphicon  {
     display: block;
     height: 20px;
-    width: 28%;
+    width: 24%;
     float: left;
     padding-left: 17%;
 }
@@ -141,9 +142,9 @@ a:hover i.glyphicon7 {
 }
 /*************************right block with table*********************/
 .main {
-    padding-right: 40px;
+    padding-right: 0;
     padding-left: 40px;
-    padding: 20px;
+    padding-top: 27px;
     width: 88%;
 }
 
@@ -156,11 +157,11 @@ a:hover i.glyphicon7 {
 }
 
 .dbTb01 {
-    width: 180px;
+    width: 240px;
 }
 
 .dbTb02 {
-    width: 180px;
+    width: 230px;
 }
 
 .dbTb03 {
@@ -172,13 +173,14 @@ a:hover i.glyphicon7 {
 }
 
 .dbTb05 {
-    width: 480px;
+    border-left: 1px solid #f1f1f1;
+    width: 400px;
 }
 
 .headtextDB1 {
-    margin-bottom: 3%;
+    margin-bottom: 2%;
     color: #b1b1b1;
-    font-size: 10px;
+    font-size: 13px;
     text-transform: uppercase;
     letter-spacing:1px;
 }
@@ -188,29 +190,29 @@ a:hover i.glyphicon7 {
 }
 
 .your-position {
-    width: 11%;
+    width: 13%;
     padding-right: 0;
 }
 
 .yPosDb {
-    font-size:18px;
+    font-size: 25px;
 }
 
 .iconTDb0 {
-    margin-top:5px;
+    margin-top: 12px;
     padding: 0;
-    width:5%;
+    width: 4%;
 }
 
 .iconTDb {
-    padding-left: 7px;
+    padding-left: 4px;
     font-size: 10px;
 }
 
 
 .littleZir {
-    font-size:10px;
-    font-weight:100;
+    font-size: 16px;
+    font-weight: 100;
 }
 
 .tableDB {
@@ -220,7 +222,7 @@ a:hover i.glyphicon7 {
 
 .little1 {
     color: #b1b1b1;
-    font-size: 8px;
+    font-size: 12px;
     font-weight:100;
 }
 
@@ -247,27 +249,25 @@ a:hover i.glyphicon7 {
 
 .headerTbD {
     color: #b1b0b0;
-    font-size:9px;
     text-transform: uppercase;
     font-weight:100;
     border-top:none;
     border-right: 1px solid #ddd;
+    font-size: 12px;
+    padding: 15px 20px !important;
 }
 
 .buttonInTable {
     background: url(../images/RoundedRectangle2.jpg) no-repeat;
     color: white;
-    padding: 10px;
+    padding: 10px 25px;
     border-radius: 3px;
-    font-weight: bold;
+    font-weight: lighter;
     display: block;
-    font-size: 9px;
+    font-size: 13px;
     text-align: center;
     background-size: cover;
     letter-spacing: 1px;
-    padding-right: 2%;
-    padding-left: 2%;
-    width: 110px;
 }
 
 .buttonInTable9:hover {
@@ -285,7 +285,7 @@ a:hover i.glyphicon7 {
 .td1 {
     font-weight: bold;
     text-align: left;
-    font-size: 12px;
+    width: 25%;
 }
 
 .td2 {
@@ -293,6 +293,7 @@ a:hover i.glyphicon7 {
     color:#9f9f9f;
     text-align: left;
     font-size: 12px;
+    width: 16%;
 }
 
 .td3 {
@@ -300,6 +301,7 @@ a:hover i.glyphicon7 {
     color: #06b6a4;
     font-size: 12px;
     font-weight: bold;
+    width: 15%
 }
 
 .td3-yellow {
@@ -316,12 +318,45 @@ a:hover i.glyphicon7 {
     font-size: 12px;
 }
 
+.td4 {
+    width: 20%;
+}
+
+.td5 {
+    width: 27%;
+}
+
+.td1, .td2, .td3, .td4, .td5, .td6 {
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+    font-size: 14px;
+    padding-left: 20px !important;
+}
+
 .td6 {
     text-align: center;
+    width: 5%;
+    padding-left: 0 !important;
 }
 
 .th-icon {
-    padding: 1% 0 0 0;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    width: 60px;
+}
+
+.imgTbDB {
+    width: 50%;
+}
+
+.icons-text {
+    vertical-align: middle;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    margin-right: 10px;
 }
 
 .th-icon1 {
@@ -333,26 +368,36 @@ a:hover i.glyphicon7 {
 }
 
 .dashboard-button {
-    padding-left: 0;
+    display: inline-block;
+    white-space: nowrap;
 }
 
 .th-text {
-    padding-left: 0;
+    font-size: 21px;
+}
+
+.td6 img {
+    width: 25%;
+}
+
+.table-top .th-text {
+    color: #606967;
 }
 
 /***************alert dashboard***********************/
 .alertDashb {
     background-color: white;
     border: none;
-    width: 25%;
+    width: 16%;
     position: absolute;
-    top: 1%;
-    left: -1%;
+    top: 4%;
+    right: 5.5%;
+    padding-left: 0;
 }
 
 .alert-link {
     color:#7f8886;
-    font-size:12px;
+    font-size: 11px;
     font-weight: lighter;
 }
 
